# third_party_cangjie_runtime

./: BUILD.gn  LICENSE  README.OpenSource  README.md  README_OpenHarmony.md  README_zh.md  bundle.json  platform.gni
runtime/: BUILD.gn  CMakeLists.txt  README.md  README_zh.md  build.py  build_runtime.md  build_runtime_zh.md  config.cmake  runtime_config.gni
runtime/src/: BUILD.gn  CMakeLists.txt  Cangjie.h  CangjieRuntime.cpp  CangjieRuntime.h  CangjieRuntimeApi.cpp  CjScheduler.cpp  CjScheduler.h  CjTimer.cpp  CjTimer.h  CommonAlias.h  CompilerCalls.cpp  CompilerCalls.h  ExceptionManager.cpp  ExceptionManager.h  ExceptionManager.inline.h  HeapManager.cpp  HeapManager.h  HeapManager.inline.h  LoaderManager.cpp  LoaderManager.h  LogManager.cpp  LogManager.h  MacAlias.h  ObjectManager.h  ObjectManager.inline.h  RuntimeConfig.h  SignalManager.cpp  SignalManager.h  StackManager.cpp  StackManager.h  TypeInfoManager.cpp  TypeInfoManager.h  export.map  local_export.map  ohos_local_export.map
runtime/src/Base/: AtomicSpinLock.h  CMakeLists.txt  CString.cpp  CString.h  FixedCString.cpp  Globals.h  HashUtils.h  ImmortalWrapper.h  Log.cpp  Log.h  LogFile.cpp  LogFile.h  Macros.h  MemUtils.cpp  MemUtils.h  Panic.h  Print.h  RwLock.h  SpinLock.h  StlHelper.h  SysCall.cpp  SysCall.h  TimeUtils.cpp  TimeUtils.h  Types.h
runtime/src/CJThread/: BUILD.gn  CMakeLists.txt  include_list.txt
runtime/src/Common/: BaseObject.cpp  BaseObject.h  CMakeLists.txt  CentralCache.cpp  CentralCache.h  Dataref.h  MarkWorkStack.h  MemCommon.h  NativeAllocator.cpp  NativeAllocator.h  PageAllocator.h  PageCache.cpp  PageCache.h  PagePool.h  RegisterAarch64.h  RegisterArm.h  RegisterX86-64.h  RunType.cpp  RunType.h  Runtime.h  ScopedObjectAccess.h  ScopedObjectLock.h  StackType.h  StateWord.h  ThreadCache.cpp  ThreadCache.h  TypeDef.h
runtime/src/Concurrency/: CMakeLists.txt  Concurrency.cpp  Concurrency.h  ConcurrencyModel.h
runtime/src/CpuProfiler/: CMakeLists.txt  CpuProfiler.cpp  CpuProfiler.h  SamplesRecord.cpp  SamplesRecord.h
runtime/src/Demangler/: BUILD.gn  CMakeLists.txt  CangjieDemangle.h  CheckDemangle.cpp  Cjfilt.cpp  Demangler.cpp  Demangler.h  StdString.h  Utils.h
runtime/src/Exception/: CMakeLists.txt  CalleeSavedRegisterContext.h  EhFrameInfo.h  EhTable.cpp  EhTable.h  Exception.cpp  Exception.h  ExceptionCApi.cpp  ExceptionCApi.h
runtime/src/Heap/: CMakeLists.txt  GcThreadPool.cpp  GcThreadPool.h  Heap.cpp  Heap.h  HeapWork.h
runtime/src/Inspector/: CMakeLists.txt  CjAllocData.cpp  CjAllocData.h  CjHeapData.cpp  CjHeapData.h  FileStream.cpp  FileStream.h  HeapSnapshotJsonSerializer.cpp  HeapSnapshotJsonSerializer.h  ProfilerAgentImpl.cpp  ProfilerAgentImpl.h  Stream.h
runtime/src/Loader/: CMakeLists.txt  ILoader.cpp  ILoader.h
runtime/src/Mutator/: CMakeLists.txt  Mutator.cpp  Mutator.h  Mutator.inline.h  MutatorManager.cpp  MutatorManager.h  SafepointPageManager.h  SatbBuffer.cpp  SatbBuffer.h  ThreadLocal.cpp  ThreadLocal.h
runtime/src/ObjectModel/: ArgValue.h  CMakeLists.txt  ExtensionData.h  Field.h  Field.inline.h  FieldInfo.cpp  FieldInfo.h  Flags.h  IVTable.cpp  IVTable.h  IVTable.inline.h  MArray.cpp  MArray.h  MArray.inline.h  MClass.cpp  MClass.h  MClass.inline.h  MFunc.cpp  MFuncdesc.h  MFuncdesc.inline.h  MObject.cpp  MObject.h  MObject.inline.h  MethodInfo.cpp  MethodInfo.h  PackageInfo.cpp  PackageInfo.h  RefField.h  RefField.inline.h
runtime/src/Sanitizer/: ArrayReferenceCounter.h  BUILD.gn  CMakeLists.txt  SanitizerCompilerCalls.h  SanitizerInterface.h  SanitizerMacros.h  SanitizerSymbols.cpp  SanitizerSymbols.h  SymbolList.def
runtime/src/Signal/: CMakeLists.txt  SignalHandler.h  SignalStack.cpp  SignalStack.h  SignalUtils.cpp  SignalUtils.h
runtime/src/StackMap/: CompressedStackMap.h  DerivedPtr.h  SlotRoot.h  StackMap.h  StackMapAarch64.h  StackMapArm.h  StackMapTable.h  StackMapTypeDef.h  StackMapX86.h  StackSizeVarInt.h
runtime/src/Sync/: CMakeLists.txt  CommonAlias.h  MacAlias.h  Sync.cpp  Sync.h
runtime/src/UnwindStack/: CMakeLists.txt  EhStackInfo.cpp  EhStackInfo.h  FrameInfo.cpp  GcStackInfo.cpp  GcStackInfo.h  MachineFrame.cpp  MangleNameHelper.cpp  MangleNameHelper.h  PrintSignalStackInfo.cpp  PrintSignalStackInfo.h  PrintStackInfo.cpp  PrintStackInfo.h  StackGrowStackInfo.cpp  StackGrowStackInfo.h  StackInfo.cpp  StackInfo.h  StackMetadataHelper.cpp  StackMetadataHelper.h  UnwindCApi.cpp  UnwindCApi.h  UnwindContext.cpp
runtime/src/Utils/: CycleQueue.h  Demangler.h  SLRUCache.h
runtime/src/arch/ios/: C2NStub.S  (+4 more)
runtime/src/arch_os/: section.cpp
runtime/src/os/: Loader.h  Path.h
std/libs/dynamicLoader/: CMakeLists.txt  opensslSymbols.c
std/schema/: BCHIRFormat.fbs  CMakeLists.txt  MacroMsgFormat.fbs  StyleGuide.md
stdlib/: .gitignore  CMakeLists.txt  build.py
stdlib/cmake/: android_aarch64_toolchain.cmake  android_x86_64_toolchain.cmake  darwin_aarch64_toolchain.cmake  darwin_toolchain.cmake  darwin_x86_64_toolchain.cmake  ios_arm64_toolchain.cmake  ios_simulator_arm64_toolchain.cmake  linux_aarch64_toolchain.cmake  linux_toolchain.cmake  linux_x86_64_toolchain.cmake  mingw_x86_64_toolchain.cmake  ohos_aarch64_clang_toolchain.cmake  ohos_arm_clang_toolchain.cmake  ohos_x86_64_clang_toolchain.cmake
stdlib/cmake/modules/: AddCangjieSource.cmake  BoundsCheck.cmake  MergeArchives.cmake  PrepareOpenSSL.cmake  ReadDarwinSDKInfo.cmake  SetupAr.cmake
stdlib/cmake/optional/: CangjieCCache.cmake
stdlib/doc/installation/: README_zh.md
stdlib/doc/libs/: summary_cjnative.md
stdlib/libs/: BUILD.gn  CMakeLists.txt  ohos_cangjie_std.gni
stdlib/libs/cmake/: AddAndCombineStaticLib.cmake  AddCJNATIVELibrary.cmake  ExtractArchive.cmake  LibraryDependencies.cmake  MakeCJNATIVEStdSharedLib.cmake
stdlib/libs/dynamicLoader/: BUILD.gn  CMakeLists.txt  declareFunction.inc  defineFunction.inc  opensslSymbols.c  opensslSymbols.h
stdlib/libs/std/: BUILD.gn  CMakeLists.txt  std.cj
stdlib/schema/: BCHIRFormat.fbs  CMakeLists.txt  CachedASTFormat.fbs  MacroMsgFormat.fbs  ModuleFormat.fbs  NodeFormat.fbs  PackageFormat.fbs  StyleGuide.md
(+1491 files in other folders)
