# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./runtime_config.gni")

ohos_group("runtime") {
  deps = [
    "./src:libcangjie-runtime",
    "./src:libcangjie-runtime-static",
    "./src/Demangler:libcangjie-demangle",
    "./src/Demangler:libcangjie-demangle-static",
    "./src/Demangler:cjfilt",
    "./src/Sanitizer:libSanitizer",
    ":cp_lds"
  ]
}

action("cp_lds") {
  script = "./build/scripts/cp_lds.py"
  args = [
    rebase_path(CANGJIE_RUNTIME_PATH),
    rebase_path("$target_out_dir/"),
    host_cpu
  ]
  outputs = [ "$target_gen_dir/", ]
}
